--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
+		<!-- This website uses the eleventy-about-me template, made by AlwaysLivid. Powered by Eleventy. -->
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +23,7 @@
 	    <!-- Twitter -->
 	    <meta name="twitter:card" content="summary">
 	    <!-- CSS -->
-	    <link rel="stylesheet" href="{{ '../css/main.css' | url }}">
-	    <!-- Scripts -->
-	    <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
+	    <link rel="stylesheet" href="{{ './css/main.css' | url }}">
     </head>
     <body>
 			<div class="container">
