--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,7 +46,7 @@ h1 {
 	display: block;
 	font-size: relative;
 	letter-spacing: 2px;
-	font-weight: 100px;
+	font-weight: 100;
 	margin: 0px;
 	padding: 0px;
 }
