--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,25 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
+
 html, body, .container {
 	background-color: #000000; 
-	height: 100%;
-	margin: 0;
+	height: 100%; 
 	text-align: center;
 	color: #FFFFFF
 }
+
 .container {
 	display: flex;
 	align-items: flex;
 	justify-content: flex
 }
+
 .box {
 	display: flex;
 	flex-direction: row;
-	width: 30%;
+	width: calc(30%);
 	padding: 30px;
 	margin: auto;
-	background-attachment: scroll;
 	align-items: center;
 	justify-content: center;
 	-webkit-flex-align: center;
@@ -27,6 +28,7 @@ html, body, .container {
 	-webkit-align-items: center;
 	font-family: 'Share Tech Mono', monospace
 }
+
 .icon {
 	height: 128px;
 	width: 128px;
@@ -38,7 +40,8 @@ html, body, .container {
 	-webkit-user-select: none;
 	-ms-user-select: none
 }
-h1 {
+
+h1, h2, h3, h4, h5, {
 	display: block;
 	font-size: relative;
 	letter-spacing: 2px;
@@ -46,6 +49,7 @@ h1 {
 	margin: 0px;
 	padding: 0px
 }
+
 i {
 	font: italic;
 	text-decoration: none;
@@ -53,6 +57,7 @@ i {
 	margin: 0px;
 	padding: 0px
 }
+
 a {
 	text-decoration: none;
 	color: #FFFFFF;
@@ -60,7 +65,13 @@ a {
 	margin: 0px;
 	padding: 0px
 }
+
 footer {
 	font-size: 12px;
-	font-family: 'Ubuntu', monospace
+	font-family: 'Ubuntu', monospace;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 40px;
+	width: 100%
 }
