--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body, .container {
 	text-align: center;
 	color: #eee;
 	background-color: #000; 
-	height: 100%; 
+	height: 100%
 }
 
 .container {
@@ -19,25 +19,25 @@ html, body, .container {
 	font-family: 'Share Tech Mono', monospace;
 	display: flex;
 	flex-direction: row;
+	width: 30%;
+	margin: auto;
+	padding: 30px;
 	align-items: center;
 	justify-content: center;
 	-webkit-flex-align: center;
 	-ms-flex-align: center;
-	-webkit-align-items: center;
-	width: 30%;
-	margin: auto;
-	padding: 30px
+	-webkit-align-items: center
 }
 
 .icon {
 	border-radius: 50%;
+	height: 128px;
+	margin: 3%;
 	user-select: none;
 	-moz-user-select: none;
 	-webkit-user-drag: none;
 	-webkit-user-select: none;
-	-ms-user-select: none;
-	height: 128px;
-	margin: 3%
+	-ms-user-select: none
 }
 
 h1 {
@@ -69,21 +69,21 @@ a {
 	padding: 0px
 }
 
+code {
+	font-family: 'Ubuntu Mono', monospace;
+	background-color: #000;
+	border: 1px solid #eee;
+	display: inline;
+	margin: 5px;
+	padding: 10px
+}
+
 footer {
 	font-family: 'Ubuntu', monospace;
+	font-size: 12px;
 	position: fixed;
 	background-image: linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 50%);
 	width: 100%;
 	bottom: 0;
 	left: 0
 };
-
-code {
-	font-family: 'Ubuntu Mono', monospace;
-	background-color: #000;
-	border: 1px solid #eee;
-	display: inline;
-	text-align: left;
-	margin: 5px;
-	padding: 10px
-}
