Made the template responsive.

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
-		<!-- This website uses the eleventy-about-me template, made by AlwaysLivid. Powered by Eleventy. -->
+	<!-- This website uses the About Me template, made by AlwaysLivid (https://alwayslivid.com). Powered by Eleventy. -->
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
 		</div>
 		<footer>
 			<p>
-				<a href="https://github.com/alwayslivid/eleventy-about-me">eleventy-about-me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
+				<a href="https://github.com/alwayslivid/eleventy-about-me">About Me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
 			</p>
 		</footer>
 	</body>	
