--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,47 +1,47 @@
 <!DOCTYPE HTML>
 <html lang="en">
-	<!-- This website uses the About Me template, made by AlwaysLivid (https://alwayslivid.com). Powered by Eleventy. -->
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>{{ title or metadata.title }}</title>
-	    <meta property="og:title" content="{{ title or renderData.title or metadata.title }}">
-	    <meta name="apple-mobile-web-app-title" content="{{ title or renderData.title or metadata.title }}">
-	    <meta name="twitter:title" content="{{ title or renderData.title  or metadata.title }}"> 
-		 <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-		 	<meta name="apple-mobile-web-app-capable" content="yes">
-	    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-	    <meta name="format-detection" content="telephone=no">
-       <!-- Icon -->
-      <link rel="icon" type="image/png"  href="{{ favicon }}">
-	    <meta name="msapplication-TileColor" content="#ffffff">
-	    <meta name="theme-color" content="#000000">
-	    <!-- Description -->
-	    <meta name="description" content="{{ description }}">
-	    <meta property="og:description" content="{{ description }}">
-	    <meta name="twitter:description" content="{{ description }}">
-	    <!-- Twitter -->
-	    <meta name="twitter:card" content="summary">
-	    <!-- CSS -->
-	    <link rel="stylesheet" href="{{ './css/main.css' | url }}">
-    </head>
-    <body>
-			<div class="container">
-				<div class="box">
-					<section>
-							<div class="header">
-							<img src="{{ header_picture }}" class="icon" alt="{{ header_picture_description }}">
-							</div>
-						<div class="main">
-							{{ content | safe }}
-						</div>
-					</section>
-			</div>
-		</div>
-		<footer>
-			<p>
-				<a href="https://github.com/alwayslivid/eleventy-about-me">About Me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
-			</p>
-		</footer>
-	</body>	
+<!-- This website uses the About Me template, made by AlwaysLivid (https://alwayslivid.com). Powered by Eleventy. -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ title or metadata.title }}</title>
+  <meta property="og:title" content="{{ title or renderData.title or metadata.title }}">
+  <meta name="apple-mobile-web-app-title" content="{{ title or renderData.title or metadata.title }}">
+  <meta name="twitter:title" content="{{ title or renderData.title  or metadata.title }}"> 
+  <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="format-detection" content="telephone=no">
+  <!-- Icon -->
+  <link rel="icon" type="image/png"  href="{{ favicon }}">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#000000">
+  <!-- Description -->
+  <meta name="description" content="{{ description }}">
+  <meta property="og:description" content="{{ description }}">
+  <meta name="twitter:description" content="{{ description }}">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <!-- CSS -->
+  <link rel="stylesheet" href="{{ './css/main.css' | url }}">
+</head>
+<body>
+  <div class="container">
+    <div class="box">
+      <section>
+        <div class="header">
+          <img src="{{ header_picture }}" class="icon" alt="{{ header_picture_description }}">
+        </div>
+        <div class="content">
+          {{ content | safe }}
+        </div>
+      </section>
+    </div>
+  </div>
+  <footer>
+    <p>
+      <a href="https://github.com/alwayslivid/eleventy-about-me">About Me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
+    </p>
+  </footer>
+</body>	
 </html>
