Small theme improvements
- Improved attribution
- Made variable name more descriptive

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer>
   <p>
-    <a href="https://github.com/alwayslivid/eleventy-about-me">About Me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
+    <a href="https://github.com/alwayslivid/eleventy-about-me">About Me</a> by <a href="https://alwayslivid.com">Panagiotis "AlwaysLivid" Vasilopoulos</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
   </p>
 </footer>
