--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -1,3 +1,3 @@
 <div class="header">
-  <img src="{{ header_picture }}" class="icon" alt="{{ header_picture_description }}">
+  <img src="{{ header_picture }}" class="icon" alt="{{ header_picture_alt }}">
 </div>
